// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state active 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle.pf-m-active {
  display: block;
  position: relative;
  min-width: 44px;
  min-height: 44px;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #282d33;
  background-color: transparent;
}

<DropdownToggle
  className=""
  iconComponent={[Function]}
  id="Dropdown Toggle"
  isActive={true}
  isFocused={false}
  isHovered={false}
  isOpen={false}
  onToggle={[Function]}
  parentRef={<div />}
>
  <DropdownToggle
    className=""
    id="Dropdown Toggle"
    isActive={true}
    isFocused={false}
    isHovered={false}
    isOpen={false}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-active"
      id="Dropdown Toggle"
      onClick={[Function]}
    >
      Dropdown
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </DropdownToggle>
</DropdownToggle>
`;

exports[`state focus 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle.pf-m-focus {
  display: block;
  position: relative;
  min-width: 44px;
  min-height: 44px;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #282d33;
  background-color: transparent;
}

<DropdownToggle
  className=""
  iconComponent={[Function]}
  id="Dropdown Toggle"
  isActive={false}
  isFocused={true}
  isHovered={false}
  isOpen={false}
  onToggle={[Function]}
  parentRef={<div />}
>
  <DropdownToggle
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isFocused={true}
    isHovered={false}
    isOpen={false}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-focus"
      id="Dropdown Toggle"
      onClick={[Function]}
    >
      Dropdown
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </DropdownToggle>
</DropdownToggle>
`;

exports[`state hover 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle.pf-m-hover {
  display: block;
  position: relative;
  min-width: 44px;
  min-height: 44px;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #282d33;
  background-color: transparent;
}

<DropdownToggle
  className=""
  iconComponent={[Function]}
  id="Dropdown Toggle"
  isActive={false}
  isFocused={false}
  isHovered={true}
  isOpen={false}
  onToggle={[Function]}
  parentRef={<div />}
>
  <DropdownToggle
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isFocused={false}
    isHovered={true}
    isOpen={false}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-hover"
      id="Dropdown Toggle"
      onClick={[Function]}
    >
      Dropdown
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </DropdownToggle>
</DropdownToggle>
`;
